<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".Login">

    <include
        layout="@layout/login_bar"
        />

    <ImageView
        android:layout_width="150sp"
        android:layout_height="75sp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="8dp"
        android:src="@drawable/logo1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.156"
        tools:ignore="MissingConstraints" />

    <TextView
        android:layout_width="300sp"
        android:layout_height="60sp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="#fff"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/mail_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.938"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/pass_word"
        android:layout_width="300sp"
        android:layout_height="60sp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/round_corner"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="30sp"
        android:paddingLeft="30sp"
        android:textColorHint="@color/colorPrimary"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mail_id"
        app:layout_constraintVertical_bias="0.126"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/mail_id"
        android:layout_width="300sp"
        android:layout_height="60sp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:hint="@string/mail_id"
        android:inputType="textEmailAddress"
        android:paddingStart="30sp"
        android:paddingLeft="30sp"
        android:paddingEnd="30sp"
        android:textColorHint="@color/colorPrimary"
        android:textColor="@color/colorPrimary"
        android:background="@drawable/round_corner"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.548"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/login"
        android:layout_width="300sp"
        android:layout_height="60sp"
        android:layout_marginStart="8dp"
        android:background="@drawable/button_curve"
        android:text="@string/login"
        android:textSize="25sp"
        android:textColor="#fff"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pass_word"
        app:layout_constraintVertical_bias="0.255"
        tools:ignore="MissingConstraints" />

</android.support.constraint.ConstraintLayout>